2012-07-04  Niibe Yutaka  <gniibe@fsij.org>

	Bug fixes.
	* src/ac.c (verify_admin_0): Compare PW_LEN and BUF_LEN.

	* src/openpgp-do.c (gpg_do_chks_prvkey): Set do_ptr to NULL before
	calling flash_do_write (which might cause GC).
	(gpg_do_put_data, gpg_do_write_simple): Likewise.

	* src/openpgp.c (cmd_reset_user_password): Write to
	DO_KEYSTRING_PW1.

2012-07-03  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/040_passphrase_change.feature: New.
	* test/features/203_passphrase_change.feature: New.
	* test/features/210_compute_signature.feature: Rename (was:
	203_compute_signature.feature)
	* test/features/211_decryption.feature: Rename (was:
	204_decryption.feature)

2012-07-02  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.__init__): Don't call setAltInterface.

2012-06-30  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (s2k): New.
	(resetcode_s2k): Remove.
	(cmd_reset_user_password, cmd_change_password): Use s2k (was:
	sha256 directly or resetcode_s2k).
	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey):
	Likewise.
	* src/ac.c (verify_user_0, verify_admin): Likewise.

2012-06-29  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/Makefile: Don't copy usb_lld.c.

2012-06-28  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/204_decryption.feature: New.
	* test/features/203_compute_signature.feature: New.
	* test/features/202_keygen.feature: New.
	* test/features/201_setup_passphrase.feature: New.
	* test/features/200_key_removal.feature: New.

	* test/rsa_keys.py (verify_signature): New.
	(encrypt_with_pubkey): New.

	* test/gnuk.py (gnuk_token): New method: increment_seq.
	(gnuk_token.icc_send_cmd): Handle timeout.
	(gnuk_token.cmd_genkey): New.
	(gnuk_token.cmd_get_public_key): New.

2012-06-27  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/101_decryption.feature: New.
	* test/features/100_compute_signature.feature: New.

	* src/openpgp-do.c (gpg_do_chks_prvkey): Call flash_do_release before
	flash_do_write.